# jp-natural-voice-app

./: .gitignore  README.md  StyleBertVITS2_hirakawa.ipynb  bert_gen.py  config.yml  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
style_bert_vits2/nlp/japanese/: bert_feature.py
